// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.delegate;

import "920-delegate-service-beans/src/main/proto/io/harness/delegate/task.proto";
import "920-delegate-service-beans/src/main/proto/io/harness/delegate/scheduling/response/execution_status.proto";
import "google/protobuf/duration.proto";

option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

service TaskStatusService {
  rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse) {}
}

message GetTaskStatusRequest {
  string account_id = 1;  // Account ID
  TaskId task_id = 2;     // Task ID
}

message GetTaskStatusResponse {
  string account_id = 1;                        // Account ID
  TaskId task_id = 2;                           // Task ID
  Status status = 3;                            // Task execution status
  string task_type = 4;                         // Can be used for mapping data to POJOs
  bytes data = 5;                               // Actual response from a task
  google.protobuf.Duration execution_time = 6;  // Duration of the task execution
}
